--- a/frontend/index.html
+++ b/frontend/index.html
@@ -110,6 +110,6 @@
 </head>
   <body class="bg-slate-50 text-slate-900 dark:bg-slate-900 dark:text-slate-100 antialiased overflow-hidden transition-colors duration-300">
     <div id="root"></div>
-  <script type="module" src="/frontend/src/main.tsx"></script>
+  <script type="module" src="./src/main.tsx"></script>
 </body>
 </html>
